chore(healthcheck): add http server healthcheck
